Se agrego item SERPIENTE ROSA

--- a/index.html
+++ b/index.html
@@ -376,7 +376,8 @@
             { url: "https://i.ibb.co/6Rs1bnvH/MARIQUITA-ROJA.png", name: "Aretes Cocomiel Rojos", price: "$5999" },
             { url: "https://i.ibb.co/1GLVsg45/PATITAS-MARIQUITA.png", name: "Aretes Cocomiel Pies", price: "$5999" },
             { url: "https://i.ibb.co/Rk0zK5XX/TREBOL-BLANCO.png", name: "Aretes Trebol Blanco", price: "$7999" },
-            { url: "https://i.ibb.co/sphNCzNQ/TREBOL-NEGRO.png", name: "Aretes Trebol Negro", price: "$7999" }
+            { url: "https://i.ibb.co/sphNCzNQ/TREBOL-NEGRO.png", name: "Aretes Trebol Negro", price: "$7999" },
+            { url: "https://i.ibb.co/Xf3mtMbF/SERPIENTE-ROSA.jpg", name: "Aretes Serpiente Rosa", price: "$5999" }
         ];
 
         // Crear galería
@@ -457,3 +458,4 @@
     </script>
 </body>
 </html>
+
