Se modifico el TITLE de la pagina

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Día de las Madres - Aretes Especiales</title>
+    <title>Bramica 777 - Día de las Madres</title>
     <style>
         * {
             margin: 0;
@@ -458,5 +458,6 @@
     </script>
 </body>
 </html>
+
 
 
