Nuevo Titulo mas Item Cadenas

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap" rel="stylesheet">
     <title>Bramica 777 - Día de las Madres</title>
     <style>
         * {
@@ -31,7 +34,8 @@
         }
 
         h1 {
-            font-size: 3em;
+            font-size: 4em;
+            font-family: Dancing Script;
             color: #d81b60;
             margin-bottom: 10px;
             text-shadow: 2px 2px 4px rgba(0,0,0,0.1);
@@ -324,7 +328,8 @@
 
     <div class="container">
         <header>
-            <h1>💕 Día de las Madres 💕</h1>
+            <h1> Bramica<sup>777</sup> </h1>
+            <h2>💕 Día de las Madres 💕</h2>
             <p class="subtitle">El regalo perfecto para mamá</p>
         </header>
 
@@ -335,7 +340,7 @@
         </div>
 
         <div class="cta-section">
-            <h2>Sorprende a Mamá con Aretes Únicos</h2>
+            <h2>Sorprende a Mamá</h2>
             <p>✨ Encuentra el regalo perfecto para demostrarle cuánto la amas ✨</p>
             <p>Cada diseño es especial, como ella</p>
         </div>
@@ -377,7 +382,14 @@
             { url: "https://i.ibb.co/1GLVsg45/PATITAS-MARIQUITA.png", name: "Aretes Cocomiel Pies", price: "$5999" },
             { url: "https://i.ibb.co/Rk0zK5XX/TREBOL-BLANCO.png", name: "Aretes Trebol Blanco", price: "$7999" },
             { url: "https://i.ibb.co/sphNCzNQ/TREBOL-NEGRO.png", name: "Aretes Trebol Negro", price: "$7999" },
-            { url: "https://i.ibb.co/Xf3mtMbF/SERPIENTE-ROSA.jpg", name: "Aretes Serpiente Rosa", price: "$5999" }
+            { url: "https://i.ibb.co/Xf3mtMbF/SERPIENTE-ROSA.jpg", name: "Aretes Serpiente Rosa", price: "$5999" },
+            // CADENAS
+            { url: "https://i.ibb.co/gMzxpPN4/CADENA-CORA1.png", name: "Cadena Doble Corazon", price: "$8999" },
+            { url: "https://i.ibb.co/60k6wXLv/CADENA-CORA2.png", name: "Cadena Corazon", price: "$9499" },
+            { url: "https://i.ibb.co/BKqs4sZC/CADENA-TURCO.png", name: "Cadena Infinito - Ojo Turco", price: "$7999" },
+            { url: "https://i.ibb.co/DgrpvgF7/CADENA-ARBOL.png", name: "Cadena Arbol", price: "$11999" },
+            { url: "https://i.ibb.co/wNn8NL2s/CADENA-CERE1.png", name: "Cadena Cereza", price: "$7999" },
+            { url: "https://i.ibb.co/RpGHy6fp/CADENA-CERE2.png", name: "Cadena Cereza con Hojas", price: "$8499" }
         ];
 
         // Crear galería
@@ -458,6 +470,3 @@
     </script>
 </body>
 </html>
-
-
-
