Se modifico tamaño del SUP

--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
             animation: fadeInDown 1s ease;
         }
 
+        sup{
+            font-size: 0.5em;
+        }
+
         h1 {
             font-size: 4em;
             font-family: Dancing Script;
@@ -470,3 +474,4 @@
     </script>
 </body>
 </html>
+
