Se agrego Items Anillos

--- a/index.html
+++ b/index.html
@@ -76,9 +76,18 @@
             { url: "https://i.ibb.co/DgrpvgF7/CADENA-ARBOL.png", name: "Cadena Arbol", price: "$11999", size: "" },
             { url: "https://i.ibb.co/wNn8NL2s/CADENA-CERE1.png", name: "Cadena Cereza", price: "$7999", size: "" },
             { url: "https://i.ibb.co/RpGHy6fp/CADENA-CERE2.png", name: "Cadena Cereza con Hojas", price: "$8499", size: "" },
-            { url: "https://i.ibb.co/Wv5PdDHp/CADENA-MARI-NEGRA.png", name: "Cadena Mariposa", price: "$8999", size: ""}
+            { url: "https://i.ibb.co/Wv5PdDHp/CADENA-MARI-NEGRA.png", name: "Cadena Mariposa", price: "$8999", size: ""},
             // ANILLOS
-            
+            { url: "https://i.ibb.co/BK71JB1S/ANILLO-GOTA.png", name: "Anillo Gota", price: "$6499", size: "18" },
+            { url: "https://i.ibb.co/xttK0z2z/ANILLO-HOJA.png", name: "Anillo Hoja", price: "$7499", size: "" },
+            { url: "https://i.ibb.co/XktQgp3H/ANILLO-LOVE.png", name: "Anillo Love", price: "$6999", size: "21" },
+            { url: "https://i.ibb.co/JFRQ904m/ANILLO-LUNA.png", name: "Anilo Luna", price: "$6999", size: "16" },
+            { url: "https://i.ibb.co/NPpdpSz/ANILLO-MARGA.png", name: "Anillo Margarita", price: "$7999", size: "18" },
+            { url: "https://i.ibb.co/0VdMYtgf/ANILLO-TREBOL-AZUL.png", name: "Anillo Trebo Azul", price: "$6999", size: "19" },
+            { url: "https://i.ibb.co/5W2LDGKY/ANILLO-TREBOL-BLANCO.png", name: "Anillo Trebol Blanco", price: "$5999", size: "16" },
+            { url: "https://i.ibb.co/q3w0nhkM/ANILLO-000.png", name: "Anillo 000", price: "$5999", size: "" },
+            { url: "https://i.ibb.co/5XHFsxBT/ANILLO-CORA.png", name: "Anillo Corazon", price: "$7999", size: "" }
+            //PULSERA
         ];
 
         // Crear galería
@@ -164,3 +173,4 @@
     </script>
 </body>
 </html>
+
