--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <script>
         // URLs de las imágenes con nombres y precios
         const images = [
-            { url: "https://i.ibb.co/2YMhchyD/CELTA.png", name: "Aretes Celta con Verde", price: "$6499", size: "", inStock: true},
+            { url: "https://i.ibb.co/2YMhchyD/CELTA.png", name: "Aretes Celta con Verde", price: "$6499", size: "", inStock: false},
             { url: "https://i.ibb.co/93HRHNJM/CELTA-PERLA.png", name: "Aretes Celta con Perlas", price: "$6499", size: "", inStock: true},
             { url: "https://i.ibb.co/gLnGyBwR/OJO-TURCO.png", name: "Aretes Ojo Turco", price: "$6599", size: "", inStock: true},
             { url: "https://i.ibb.co/Hfxs73jz/FLOR-NEGRA.png", name: "Aretes Flores Negras", price: "$3999", size: "", inStock: true},
@@ -186,5 +186,6 @@
     </script>
 </body>
 </html>
+
 
 
