Se Agrego PULSERA

--- a/index.html
+++ b/index.html
@@ -86,8 +86,9 @@
             { url: "https://i.ibb.co/0VdMYtgf/ANILLO-TREBOL-AZUL.png", name: "Anillo Trebo Azul", price: "$6999", size: "19", inStock: true},
             { url: "https://i.ibb.co/5W2LDGKY/ANILLO-TREBOL-BLANCO.png", name: "Anillo Trebol Blanco", price: "$5999", size: "16", inStock: true},
             { url: "https://i.ibb.co/q3w0nhkM/ANILLO-000.png", name: "Anillo 000", price: "$5999", size: "", inStock: true},
-            { url: "https://i.ibb.co/5XHFsxBT/ANILLO-CORA.png", name: "Anillo Corazon", price: "$7999", size: "", inStock: true}
+            { url: "https://i.ibb.co/5XHFsxBT/ANILLO-CORA.png", name: "Anillo Corazon", price: "$7999", size: "", inStock: true},
             //PULSERA
+            { url: "https://i.ibb.co/0jDp2pLM/PULSERA-CORAZON.png", name: "Pulsera Pandora Corazon", price: "$13499", size: "", inStock: true }
         ];
 
         // Crear galería
@@ -186,6 +187,7 @@
     </script>
 </body>
 </html>
+
 
 
 
